--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,7 @@
+.container.position-relative.mt-4.mt-lg-0.mb-lg-5 {
+    margin-top: 15px !important;
+}
+
 header {
   background-color: #fffbf3;
   padding-bottom: 96px;
